--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-TC7Z9M6');</script>
-    <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Jenessa White is a Front-End Engineer in the Twin Cities of Minnesota.">
     <meta name="author" content="Jenessa White">
     <title>Jenessa White | Front-End Engineer by day...</title>
@@ -18,56 +11,232 @@
     <link rel="stylesheet" href="./styles/normalize.css" media="screen" title="no title">
     <!-- Ionicons CSS -->
     <link rel="stylesheet" href="./styles/ionicons.min.css" media="screen" title="no title">
+    <!-- DevIcons -->
+    <link href='https://cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css' rel='stylesheet'>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/styles/index.css">
   </head>
 
   <body>
+    <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TC7Z9M6"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <!-- NAVIGATION -->
+    <nav class="navbar navbar-toggleable-sm fixed-top">
+      <button class="navbar-toggler navbar-toggler-right custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="">Jenessa</a>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link links" href="#">About Me</a>
+          <a class="nav-item nav-link links" href="#skills">Skills</a>
+          <a class="nav-item nav-link links" href="#portfolio">Portfolio</a>
+          <a class="nav-item nav-link links" href="#contact">Connect</a>
+        </div>
+      </div>
+    </nav>
+
 
     <!-- CONTENT -->
-    <div class="container-fluid main">
-      <h1>New Site Coming... </h1>
-      <div id="countdown">
-      </div>
-      <h2>#may1reboot</h2>
-      <div class="footer">
-        <div class="footer-social-group">
-          <a href="https://github.com/jenessawhite" class="social-links" target="_blank">
-            <i class="icon ion-social-github-outline footer-social-button"></i>
-          </a>
-          <a href="https://linkedin.com/in/jenessawhite" class="social-links" target="_blank">
-            <i class="icon ion-social-linkedin-outline  footer-social-button"></i>
-          </a>
-          <a href="https://twitter.com/jnessview" class="social-links" target="_blank">
-            <i class="icon ion-social-twitter-outline  footer-social-button"></i>
-          </a>
-          <a href="https://instagram.com/thenessview" class="social-links" target="_blank">
-            <i class="icon ion-social-instagram-outline  footer-social-button"></i>
-          </a>
+    <div class="container-fluid main" id="content" tabindex="-1">
+
+
+
+      <!-- The main page content -->
+      <section class="text-center" id="about">
+        <div class="container">
+          <h1 class="name anchors">Jenessa White</h1>
+          <h2 class="text-muted intro-text">
+            Front-End Developer</br>
+            Mobile Enthusiast</br>
+            App Lover
+          </h2>
+          <h2 class="text-muted intro-text-large">
+            Front-End Developer. Mobile Enthusiast. App Lover
+          </h2>
+          <p class="">
+            My name is Jenessa (people call me Jenessa but I'm working on a good nickname) and I am a Front-End Engineer with a ton of customer service experince. So what does all that mean? I know just what people want and I know what they actually need (because
+            we know they aren't always the same thing). I just want to make sure that they can get everything in the cleanest, most beautiful way possible!
+          </p>
         </div>
-        <div>
-          &copy; 2016 -
-          <script type="text/javascript">
-            document.write(new Date().getFullYear());
-          </script> Jenessa White.
+      </section>
+
+      <hr>
+
+      <section class="text-center" id="skills">
+        <div class="container">
+          <div class="info-languages">
+            <h2 class="anchors">Skills</h2>
+            <div class="row">
+              <div class="col-lg-3 col-6">
+                <div class="service-box" data-toggle="tooltip" data-placement="top" title="HTML">
+                  <i class="fa-4x devicons devicons-html5 wow bounceIn" data-wow-duration="2.0s"></i>
+                </div>
+              </div>
+              <div class="col-lg-3 col-6 ">
+                <div class="service-box" data-toggle="tooltip" data-placement="top" title="CSS3">
+                  <i class="fa-4x devicons devicons-css3 wow bounceIn" data-wow-duration="2.0s"></i>
+                </div>
+              </div>
+              <div class="col-lg-3 col-6">
+                <div class="service-box" data-toggle="tooltip" data-placement="top" title="JavaScript">
+                  <i class="fa-4x devicons devicons-javascript_badge wow bounceIn" data-wow-duration="2.0s"></i>
+                </div>
+              </div>
+              <div class="col-lg-3 col-6">
+                <div class="service-box" data-toggle="tooltip" data-placement="bottom" title="jQuery">
+                  <i class="fa-4x devicons devicons-jquery wow bounceIn" data-wow-duration="2.0s"></i>
+                </div>
+              </div>
+            </div>
+            <div class="row short-row">
+              <div class="col-lg-3 col-6">
+                <div class="service-box" data-toggle="tooltip" data-placement="top" title="Node.js">
+                  <i class="fa-4x devicons devicons-nodejs_small wow bounceIn" data-wow-duration="2.0s"></i>
+                </div>
+              </div>
+              <div class="col-lg-3 col-6">
+                <div class="service-box" data-toggle="tooltip" data-placement="bottom" title="Bootstrap">
+                  <i class="fa-4x devicons devicons-bootstrap wow bounceIn" data-wow-duration="2.0s"></i>
+                </div>
+              </div>
+              <div class="col-lg-3 col-6">
+                <div class="service-box" data-toggle="tooltip" data-placement="bottom" title="Git">
+                  <i class="fa-4x devicons devicons-git wow bounceIn" data-wow-duration="2.0s"></i>
+                </div>
+              </div>
+            </div>
+            
+            <br><br>
+            <p>If you're concerned that you don't see what you're looking for, don't worry, I pick up things quickly...seriously.</p>
+          </div>
         </div>
-      </div>
+      </section>
+
+      <hr>
+
+      <section class="text-center" id="portfolio">
+        <div class="container">
+          <h2 class="anchors">Portfolio</h2>
+          <p class="lead text-muted">Here's a look at some of the projects I've built/contributed to thus far. <a href="mailto:jenessaw31@gmail.com" class="email">Connect</a> with me if you want to learn more</p>
+          <div class="portfolio-items-wrapper">
+            <div class="portfolio-item">
+              <h3>Bulb App</h3>
+              <img src="assets/demo.gif"/>
+              </br>
+              <a href="https://github.com/jenessawhite/Bulb-App" class="portfolio-links" target="_blank">
+                <i class="icon ion-social-github-outline"></i>
+              </a>
+            </div>
+
+            <div class="portfolio-item">
+              <h3>Perpich Foundation</h3>
+              <img src="assets/perpich.png"/>
+              </br>
+              <a href="http://live-perpich-foundation.pantheonsite.io/" class="portfolio-links" target="_blank">
+                <i class="icon ion-social-github-outline"></i>
+              </a>
+            </div>
+
+            <div class="portfolio-item">
+              <h3>Track-It</h3>
+              <img src="assets/trackit.png"/>
+              </br>
+              <a href="https://github.com/jenessawhite/track-it" class="portfolio-links" target="_blank">
+                <i class="icon ion-social-github-outline"></i>
+              </a>
+            </div>
+
+            <div class="portfolio-item">
+              <h3>Novus Tacos</h3>
+              <img src="assets/novous-tacos.png"/>
+              </br>
+              <a href="https://github.com/novustacos/novustacos" class="portfolio-links" target="_blank">
+                <i class="icon ion-social-github-outline"></i>
+              </a>
+            </div>
+
+            <div class="portfolio-item">
+              <h3>ShareIt</h3>
+              <img src="assets/shareit.png"/>
+              </br>
+              <a href="https://github.com/Share-It/shareit" class="portfolio-links" target="_blank">
+                <i class="icon ion-social-github-outline"></i>
+              </a>
+            </div>
+
+            <div class="portfolio-item">
+              <h3>Revolutionz</h3>
+              <img src="assets/revolutionz.png"/>
+              </br>
+              <a href="https://github.com/Revolutionz-TIY/CrossoverProject" class="portfolio-links" target="_blank">
+                <i class="icon ion-social-github-outline"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
+      <section class="text-center" id="contact">
+        <div class="container">
+          <h2 class="anchors">Let's Connect</h2>
+          <p class="lead text-muted">I'm always up for great conversation, learning and work opportunities. Connect with me on anything below! </p>
+          <!-- <div class="service-box">
+            <a href="https://github.com/jenessawhite" class="social-links" target="_blank">
+              <i class="icon ion-social-github-outline footer-social-button"></i>
+            </a>
+            <a href="https://linkedin.com/in/jenessawhite" class="social-links" target="_blank">
+              <i class="icon ion-social-linkedin-outline  footer-social-button"></i>
+            </a>
+            <a href="https://twitter.com/jnessview" class="social-links" target="_blank">
+              <i class="icon ion-social-twitter-outline  footer-social-button"></i>
+            </a>
+            <a href="https://instagram.com/thenessview" class="social-links" target="_blank">
+              <i class="icon ion-social-instagram-outline  footer-social-button"></i>
+            </a>
+          </div> -->
+        </div>
+      </section>
+
 
     </div>
 
+    <!-- FOOTER -->
+    <footer class="footer text-center">
+      <div class="footer-social-group">
+        <a href="https://github.com/jenessawhite" class="social-links" target="_blank">
+          <i class="icon ion-social-github-outline footer-social-button"></i>
+        </a>
+        <a href="https://linkedin.com/in/jenessawhite" class="social-links" target="_blank">
+          <i class="icon ion-social-linkedin-outline  footer-social-button"></i>
+        </a>
+        <a href="https://twitter.com/jnessview" class="social-links" target="_blank">
+          <i class="icon ion-social-twitter-outline  footer-social-button"></i>
+        </a>
+        <a href="https://instagram.com/thenessview" class="social-links" target="_blank">
+          <i class="icon ion-social-instagram-outline  footer-social-button"></i>
+        </a>
+      </div>
+      <div>
+        &copy; 2016 -
+        <script type="text/javascript">
+          document.write(new Date().getFullYear());
+        </script> Jenessa White.
+      </div>
+    </footer>
+
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-    <!-- <script src="dist/progressbar.js" charset="utf-8"></script> -->
-    <script src="src/index.js" charset="utf-8"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <!-- <script src="src/index.js" charset="utf-8"></script> -->
     <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
