--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div>
               </div>
             </div>
-            
+
             <br><br>
             <p>If you're concerned that you don't see what you're looking for, don't worry, I pick up things quickly...seriously.</p>
           </div>
@@ -145,7 +145,7 @@
 
             <div class="portfolio-item">
               <h3>Track-It</h3>
-              <img src="assets/trackit.png"/>
+              <img src="assets/trackIt.png"/>
               </br>
               <a href="https://github.com/jenessawhite/track-it" class="portfolio-links" target="_blank">
                 <i class="icon ion-social-github-outline"></i>
@@ -163,7 +163,7 @@
 
             <div class="portfolio-item">
               <h3>ShareIt</h3>
-              <img src="assets/shareit.png"/>
+              <img src="assets/shareIt.png"/>
               </br>
               <a href="https://github.com/Share-It/shareit" class="portfolio-links" target="_blank">
                 <i class="icon ion-social-github-outline"></i>
