added React icon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Ionicons CSS -->
     <link rel="stylesheet" href="./styles/ionicons.min.css" media="screen" title="no title">
     <!-- DevIcons -->
-    <link href='https://cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css' rel='stylesheet'>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/devicons/1.8.0/css/devicons.min.css' rel='stylesheet'>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <!-- Custom CSS -->
@@ -100,6 +100,12 @@
                   <i class="fa-4x devicons devicons-nodejs_small wow bounceIn" data-wow-duration="2.0s"></i>
                 </div>
               </div>
+              <div class="col-lg-3 col-6">
+                <div class="service-box" data-toggle="tooltip" data-placement="bottom" title="React">
+                  <i class="fa-4x devicons devicons-react wow bounceIn" data-wow-duration="2.0s"></i>
+                </div>
+              </div>
+
               <div class="col-lg-3 col-6">
                 <div class="service-box" data-toggle="tooltip" data-placement="bottom" title="Bootstrap">
                   <i class="fa-4x devicons devicons-bootstrap wow bounceIn" data-wow-duration="2.0s"></i>
