--- a/index.html
+++ b/index.html
@@ -75,45 +75,45 @@
             <div class="row">
               <div class="col-lg-3 col-6">
                 <div class="service-box" data-toggle="tooltip" data-placement="top" title="HTML">
-                  <i class="fa-4x devicons devicons-html5 wow bounceIn" data-wow-duration="2.0s"></i>
+                  <i class="fa-4x devicons devicons-html5 bounceIn" data-wow-duration="2.0s"></i>
                 </div>
               </div>
               <div class="col-lg-3 col-6 ">
                 <div class="service-box" data-toggle="tooltip" data-placement="top" title="CSS3">
-                  <i class="fa-4x devicons devicons-css3 wow bounceIn" data-wow-duration="2.0s"></i>
+                  <i class="fa-4x devicons devicons-css3 bounceIn" data-wow-duration="2.0s"></i>
                 </div>
               </div>
               <div class="col-lg-3 col-6">
                 <div class="service-box" data-toggle="tooltip" data-placement="top" title="JavaScript">
-                  <i class="fa-4x devicons devicons-javascript_badge wow bounceIn" data-wow-duration="2.0s"></i>
+                  <i class="fa-4x devicons devicons-javascript_badge bounceIn" data-wow-duration="2.0s"></i>
                 </div>
               </div>
               <div class="col-lg-3 col-6">
                 <div class="service-box" data-toggle="tooltip" data-placement="bottom" title="jQuery">
-                  <i class="fa-4x devicons devicons-jquery wow bounceIn" data-wow-duration="2.0s"></i>
+                  <i class="fa-4x devicons devicons-jquery bounceIn" data-wow-duration="2.0s"></i>
                 </div>
               </div>
             </div>
             <div class="row short-row">
-              <div class="col-lg-3 col-6">
-                <div class="service-box" data-toggle="tooltip" data-placement="top" title="Node.js">
-                  <i class="fa-4x devicons devicons-nodejs_small wow bounceIn" data-wow-duration="2.0s"></i>
+              <div class="col-lg-3 col-6" data-toggle="tooltip" data-placement="top" title="Node.js">
+                <div class="service-box">
+                  <i class="fa-4x devicons devicons-nodejs bounceIn"></i>
                 </div>
               </div>
               <div class="col-lg-3 col-6">
                 <div class="service-box" data-toggle="tooltip" data-placement="bottom" title="React">
-                  <i class="fa-4x devicons devicons-react wow bounceIn" data-wow-duration="2.0s"></i>
+                  <i class="fa-4x devicons devicons-react bounceIn" data-wow-duration="2.0s"></i>
                 </div>
               </div>
 
               <div class="col-lg-3 col-6">
                 <div class="service-box" data-toggle="tooltip" data-placement="bottom" title="Bootstrap">
-                  <i class="fa-4x devicons devicons-bootstrap wow bounceIn" data-wow-duration="2.0s"></i>
+                  <i class="fa-4x devicons devicons-bootstrap bounceIn" data-wow-duration="2.0s"></i>
                 </div>
               </div>
               <div class="col-lg-3 col-6">
                 <div class="service-box" data-toggle="tooltip" data-placement="bottom" title="Git">
-                  <i class="fa-4x devicons devicons-git wow bounceIn" data-wow-duration="2.0s"></i>
+                  <i class="fa-4x devicons devicons-git bounceIn" data-wow-duration="2.0s"></i>
                 </div>
               </div>
             </div>
@@ -194,21 +194,35 @@
         <div class="container">
           <h2 class="anchors">Let's Connect</h2>
           <p class="lead text-muted">I'm always up for great conversation, learning and work opportunities. Connect with me on anything below! </p>
-          <!-- <div class="service-box">
-            <a href="https://github.com/jenessawhite" class="social-links" target="_blank">
-              <i class="icon ion-social-github-outline footer-social-button"></i>
-            </a>
-            <a href="https://linkedin.com/in/jenessawhite" class="social-links" target="_blank">
-              <i class="icon ion-social-linkedin-outline  footer-social-button"></i>
-            </a>
-            <a href="https://twitter.com/jnessview" class="social-links" target="_blank">
-              <i class="icon ion-social-twitter-outline  footer-social-button"></i>
-            </a>
-            <a href="https://instagram.com/thenessview" class="social-links" target="_blank">
-              <i class="icon ion-social-instagram-outline  footer-social-button"></i>
-            </a>
-          </div> -->
+          <div class="row align-items-center">
+            <div class="col align-self-center">
+              <a href="https://github.com/jenessawhite" class="contact-box-links" target="_blank">
+                <i class="icon ion-social-github-outline contact-box-icon"></i>
+              </a>
+              <a href="https://linkedin.com/in/jenessawhite" class="contact-box-links" target="_blank">
+                <i class="icon ion-social-linkedin-outline  contact-box-icon"></i>
+              </a>
+              <a href="https://twitter.com/jnessview" class="contact-box-links" target="_blank">
+                <i class="icon ion-social-twitter-outline contact-box-icon"></i>
+              </a>
+              <a href="https://instagram.com/thenessview" class="contact-box-links" target="_blank">
+                <i class="icon ion-social-instagram-outline  contact-box-icon"></i>
+              </a>
+            </div>
+          </div>
         </div>
+        <!-- <div class="form-group row">
+          <label for="example-text-input" class="col-2 col-form-label">Text</label>
+          <div class="col-10">
+            <input class="form-control" type="text" value="Artisanal kale" id="example-text-input">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="example-email-input" class="col-2 col-form-label">Email</label>
+          <div class="col-10">
+            <input class="form-control" type="email" value="bootstrap@example.com" id="example-email-input">
+          </div>
+        </div> -->
       </section>
 
 
@@ -239,10 +253,10 @@
     </footer>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <!-- <script src="src/index.js" charset="utf-8"></script> -->
+    <script src="src/index.js" charset="utf-8"></script>
     <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
