fix spelling error

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             Front-End Developer. Mobile Enthusiast. App Lover
           </h2>
           <p class="">
-            My name is Jenessa (people call me Jenessa but I'm working on a good nickname) and I am a Front-End Engineer with a ton of customer service experince. So what does all that mean? I know just what people want and I know what they actually need (because
+            My name is Jenessa (people call me Jenessa but I'm working on a good nickname) and I am a Front-End Engineer with a ton of customer service experience. So what does all that mean? I know just what people want and I know what they actually need (because
             we know they aren't always the same thing). I just want to make sure that they can get everything in the cleanest, most beautiful way possible!
           </p>
         </div>
